Monospaced console font, console dark mode, console colors support